=====================================================================
Advanced Facebook Like Box 1.7.2 - Released 21-February-2022
=====================================================================

~ Module improvement

=====================================================================
Advanced Facebook Like Box 1.6.2 - Released 21-February-2022
=====================================================================

~ Module improvement

=====================================================================
Advanced Facebook Like Box 1.5.2 - Released 18-February-2022
=====================================================================

~ Module improvement

=====================================================================
Advanced Facebook Like Box 1.4.2 - Released 17-February-2022
=====================================================================

$ Translation of the module into Ukrainian (uk-UA)

=====================================================================
Advanced Facebook Like Box 1.4.1 - Released 17-February-2022
=====================================================================

~ Module improvement
+ Adding Supported Module Languages
$ Translation of the module into Russian (ru-RU)

=====================================================================
Advanced Facebook Like Box 1.3.0 - Released 15-February-2022
=====================================================================

~ Module improvement

=====================================================================
Advanced Facebook Like Box 1.2.0 - Released 10-February-2022
=====================================================================

# Fixed module display error

=====================================================================
Advanced Facebook Like Box 1.1.0 - Released 10-February-2022
=====================================================================

~ Module improvement

=====================================================================