@@ -7,7 +7,7 @@
 	<license>GNU General Public License version 3</license>
 	<authorEmail>yaroslaw74@gmail.com</authorEmail>
 	<authorUrl>https://github.com/yaroslaw74</authorUrl>
-	<version>1.7.2</version>
+	<version>1.8.2</version>
 	<description>MOD_ADVANCED_FACEBOOK_LIKE_BOX_XML_DESCRIPTION</description>
 	<files>
 		<folder>tmpl</folder>
@@ -34,37 +34,37 @@
 				<field name="pageName" type="text" default="Facebook Developers" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_PAGE_NAME_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_PAGE_NAME_DESC" filter="safehtml" />
 				<field name="width" type="number" default="340" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_WIDTH_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_WIDTH_DESC" filter="integer" />
 				<field name="height" type="number" default="500" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_HEIGHT_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_HEIGHT_DESC" filter="integer" />
-				<field name="showFaces" type="radio" default="1" class="btn-group btn-group-yesno" filter="integer" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW_FACES_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW_FACES_DESC">
-					<option value="1">MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW</option>
-					<option value="0">MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE</option>
-				</field>
-				<field name="tabsTimeline" type="radio" default="0" class="btn-group btn-group-yesno" filter="integer" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_TIMELINE_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_TIMELINE_DESC">
-					<option value="1">MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW</option>
-					<option value="0">MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE</option>
-				</field>
-				<field name="tabsEvents" type="radio" default="0" class="btn-group btn-group-yesno" filter="integer" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_EVENTS_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_EVENTS_DESC">
-					<option value="1">MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW</option>
-					<option value="0">MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE</option>
-				</field>
-				<field name="tabsMessages" type="radio" default="0" class="btn-group btn-group-yesno" filter="integer" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_MESSAGES_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_MESSAGES_DESC">
-					<option value="1">MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW</option>
-					<option value="0">MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE</option>
-				</field>
-				<field name="showHeader" type="radio" default="0" class="btn-group btn-group-yesno" filter="integer" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW_HEADER_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW_HEADER_DESC">
-					<option value="1">MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW</option>
-					<option value="0">MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE</option>
-				</field>
-				<field name="adaptContainerWidth" type="radio" default="1" class="btn-group btn-group-yesno" filter="integer" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_ADAPT_CONTAINER_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_ADAPT_CONTAINER_DESC">
+				<field name="showFaces" type="radio" default="1" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW_FACES_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW_FACES_DESC" filter="integer">
 					<option value="1">JYES</option>
 					<option value="0">JNO</option>
 				</field>
-				<field name="smallHeader" type="radio" default="0" class="btn-group btn-group-yesno" filter="integer" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SMALL_HEADER_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SMALL_HEADER_DESC">
+				<field name="tabsTimeline" type="radio" default="0" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_TIMELINE_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_TIMELINE_DESC"  filter="integer">
 					<option value="1">JYES</option>
 					<option value="0">JNO</option>
 				</field>
-				<field name="hideCta" type="radio" default="0" class="btn-group btn-group-yesno" filter="integer" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE_CTA_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE_CTA_DESC">
-					<option value="1">MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW</option>
-					<option value="0">MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE</option>
+				<field name="tabsEvents" type="radio" default="0" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_EVENTS_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_EVENTS_DESC"  filter="integer">
+					<option value="1">JYES</option>
+					<option value="0">JNO</option>
+				</field>
+				<field name="tabsMessages" type="radio" default="0" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_MESSAGES_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_TABS_MESSAGES_DESC"  filter="integer">
+					<option value="1">JYES</option>
+					<option value="0">JNO</option>
+				</field>
+				<field name="showHeader" type="radio" default="0" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW_HEADER_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SHOW_HEADER_DESC"  filter="integer">
+					<option value="1">JYES</option>
+					<option value="0">JNO</option>
+				</field>
+				<field name="adaptContainerWidth" type="radio" default="1" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_ADAPT_CONTAINER_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_ADAPT_CONTAINER_DESC"  filter="integer">
+					<option value="1">JYES</option>
+					<option value="0">JNO</option>
+				</field>
+				<field name="smallHeader" type="radio" default="0" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SMALL_HEADER_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_SMALL_HEADER_DESC"  filter="integer">
+					<option value="1">JYES</option>
+					<option value="0">JNO</option>
+				</field>
+				<field name="hideCta" type="radio" default="0" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE_CTA_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_HIDE_CTA_DESC"  filter="integer">
+					<option value="1">JYES</option>
+					<option value="0">JNO</option>
 				</field>
 				<field name="lang" type="list" default="en_GB" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_LANG_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_LANG_DESC">
 					<option value="af_ZA">MOD_ADVANCED_FACEBOOK_LIKE_BOX_AF_ZA</option>
@@ -205,6 +205,10 @@
 					<option value="zh_TW">MOD_ADVANCED_FACEBOOK_LIKE_BOX_ZH_TW</option>
 					<option value="zu_ZA">MOD_ADVANCED_FACEBOOK_LIKE_BOX_ZU_ZA</option>
 					<option value="zz_TR">MOD_ADVANCED_FACEBOOK_LIKE_BOX_ZZ_TR</option>
+				</field>
+				<field name="moduleCenterHorizontally" type="radio" default="0" class="btn-group btn-group-yesno" label="MOD_ADVANCED_FACEBOOK_LIKE_BOX_CENTER_HORIZONTALLY_LABEL" description="MOD_ADVANCED_FACEBOOK_LIKE_BOX_CENTER_HORIZONTALLY_DESC">
+					<option value="1">JYES</option>
+					<option value="0">JNO</option>
 				</field>
 			</fieldset> 
 			<fieldset name="advanced">
