@@ -1,4 +1,10 @@
 =====================================================================
+Advanced Facebook Like Box 1.8.2 - Released 22-February-2022
+=====================================================================
+
+~ Module improvement
+
+=====================================================================
 Advanced Facebook Like Box 1.7.2 - Released 21-February-2022
 =====================================================================
 
